--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,14 @@ jobs:
         DOCKER_IMAGE=ghcr.io/${{ steps.lowercase_repo_owner.outputs.lowercase }}/alcs-api
         oc login --token=${{ secrets.OC_TOKEN }} --server=${{ secrets.OC_SERVER }}
         
-    - name: Import Image
+    - name: Import Images
       run: |
         oc import-image alcs-api:latest -n ${{secrets.LICENSE_PLATE}}-tools
         oc tag alcs-api:latest alcs-api:${{ github.run_number }} -n ${{secrets.LICENSE_PLATE}}-tools
+        oc import-image alcs-frontend:latest -n ${{secrets.LICENSE_PLATE}}-tools
+        oc tag alcs-frontend:latest alcs-frontend:${{ github.run_number }} -n ${{secrets.LICENSE_PLATE}}-tools
+        oc import-image alcs-migrate:latest -n ${{secrets.LICENSE_PLATE}}-tools
+        oc tag alcs-migrate:latest alcs-migrate:${{ github.run_number }} -n ${{secrets.LICENSE_PLATE}}-tools
 
     - name: Repository Dispatch
       uses: peter-evans/repository-dispatch@v1
