--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -26,8 +26,8 @@
     "@angular/router": "^14.0.0",
     "@bcgov/bc-sans": "^1.0.1",
     "@matheo/datepicker": "^13.0.0-beta.1",
+    "@ng-matero/extensions": "^14.2.1",
     "@ng-select/ng-option-highlight": "^0.0.7",
-    "@ng-select/ng-select": "^9.0.2",
     "angular-mentions": "^1.5.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
