--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -33,6 +33,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "rxjs": "~7.5.0",
+    "source-map-support": "^0.5.21",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
