--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -32,6 +32,7 @@
     "angular-mentions": "^1.5.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
     "rxjs": "~7.5.0",
     "source-map-support": "^0.5.21",
     "tslib": "^2.3.0",
