--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -13,6 +13,7 @@
     "start:dev": "nest start TZ=UTC --watch",
     "start:debug": "nest start TZ=UTC --debug --watch",
     "start:prod": "node dist/main TZ=UTC",
+    "graph": "nest start TZ=UTC -- graph-only",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -54,6 +55,7 @@
     "nestjs-cls": "^2.2.0",
     "nestjs-pino": "^3.1.1",
     "node-jose": "^2.1.1",
+    "nestjs-spelunker": "^1.1.2",
     "pg": "^8.7.3",
     "redis": "^4.2.0",
     "reflect-metadata": "^0.1.13",
