--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -13,9 +13,11 @@
     "start:dev": "nest start TZ=UTC --watch",
     "start:debug": "nest start TZ=UTC --debug --watch",
     "start:prod": "node dist/main TZ=UTC",
+    "import:dev": "nest start --entryFile import.js",
+    "import:prod": "node dist/import TZ=UTC",
     "graph": "nest start TZ=UTC -- graph-only",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "TZ=UTC jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -49,13 +51,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "config": "^3.3.7",
+    "csv-parser": "^3.0.0",
     "dayjs": "^1.11.4",
     "keycloak-connect": "^18.0.2",
     "nest-keycloak-connect": "^1.9.0",
     "nestjs-cls": "^2.2.0",
     "nestjs-pino": "^3.1.1",
-    "node-jose": "^2.1.1",
     "nestjs-spelunker": "^1.1.2",
+    "node-jose": "^2.1.1",
     "pg": "^8.7.3",
     "redis": "^4.2.0",
     "reflect-metadata": "^0.1.13",
@@ -85,6 +88,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.2",
+    "memfs": "^3.4.9",
     "pino-pretty": "^8.1.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
@@ -93,7 +97,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "unionfs": "^4.4.0"
   },
   "jest": {
     "moduleFileExtensions": [
