Change usages of user to Assignee
* Use AssigneeDTO in all cases except loading the current users profile
* Add new endpoint to load the current users with all fields
* Add necessary fields to Assignee so it can be used everywhere

--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -18,10 +18,10 @@
     "graph": "nest start TZ=UTC -- graph-only",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "TZ=UTC jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:watch": "TZ=UTC jest --watch",
+    "test:cov": "TZ=UTC jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "TZ=UTC jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-esm -d ./src/providers/typeorm/datasource.cli.orm.config.ts",
     "typeorm:cli": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migration:generate": "npm run typeorm -- migration:generate ./src/providers/typeorm/migrations/$npm_config_name",
