--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -13,7 +13,7 @@
     "start:dev": "nest start TZ=UTC --watch",
     "start:debug": "nest start TZ=UTC --debug --watch",
     "start:prod": "node dist/main TZ=UTC",
-    "import:dev": "nest start --entryFile import.js",
+    "import:dev": "nest start TZ=UTC --entryFile import.js",
     "import:prod": "node dist/import TZ=UTC",
     "graph": "nest start TZ=UTC -- graph-only",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
