--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -89,6 +89,7 @@
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
     "@types/node-jose": "^1.1.10",
+    "@types/source-map-support": "^0.5.6",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -101,7 +102,7 @@
     "memfs": "^3.4.9",
     "pino-pretty": "^8.1.0",
     "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
+    "source-map-support": "^0.5.21",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
     "ts-loader": "^9.2.3",
