--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -19,13 +19,12 @@
     "alcs:start:dev": "nest start alcs TZ=UTC --watch",
     "alcs:start:debug": "nest start alcs TZ=UTC --debug --watch",
     "alcs:start:prod": "node dist/apps/alcs/main TZ=UTC",
-    "alcs:import:dev": "nest start alcs TZ=UTC --entryFile import.js",
-    "alcs:import:prod": "node dist/import TZ=UTC",
-    "alcs:graph": "nest start TZ=UTC -- graph-only",
+    "alcs:import": "nest start alcs TZ=UTC -- import",
+    "alcs:graph": "nest start TZ=UTC -- graph",
     "alcs:typeorm": "typeorm-ts-node-esm -d apps/alcs/src/providers/typeorm/datasource.cli.orm.config.ts",
     "alcs:typeorm:cli": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "alcs:migration:generate": "npm run alcs:typeorm -- migration:generate apps/alcs/src/providers/typeorm/migrations/$npm_config_name",
-    "alcs:migration:create": "npm run typeorm:cli migration:create apps/alcs/src/providers/typeorm/migrations/$npm_config_name",
+    "alcs:migration:create": "npm run alcs:typeorm:cli migration:create apps/alcs/src/providers/typeorm/migrations/$npm_config_name",
     "alcs:migration:run": "npm run alcs:typeorm migration:run",
     "portal:build": "nest build portal",
     "portal:start": "nest start portal TZ=UTC",
@@ -35,7 +34,7 @@
     "portal:typeorm": "typeorm-ts-node-esm -d ./apps/portal/src/providers/typeorm/datasource.cli.orm.config.ts",
     "portal:typeorm:cli": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "portal:migration:generate": "npm run portal:typeorm -- migration:generate ./apps/portal/src/providers/typeorm/migrations/$npm_config_name",
-    "portal:migration:create": "npm run typeorm:cli migration:create ./apps/portal/src/providers/typeorm/migrations/$npm_config_name",
+    "portal:migration:create": "npm run portal:typeorm:cli migration:create ./apps/portal/src/providers/typeorm/migrations/$npm_config_name",
     "portal:migration:run": "npm run portal:typeorm migration:run"
   },
   "dependencies": {
