--- a/services/oracle-to-pg/ora2pg/config/ora2pg.conf
+++ b/services/oracle-to-pg/ora2pg/config/ora2pg.conf
@@ -302,7 +302,7 @@ FTS_INDEX_ONLY	1
 #	CREATE OR REPLACE FUNCTION unaccent_immutable(text)
 #	RETURNS text AS
 #	$$
-#		SELECT "alcs".unaccent('"alcs".unaccent', )
+#		SELECT public.unaccent('public.unaccent', )
 #	$$  LANGUAGE sql IMMUTABLE
 #	    COST 1;
 #
@@ -324,7 +324,7 @@ USE_UNACCENT		0
 #      CREATE OR REPLACE FUNCTION unaccent_immutable(text)
 #      RETURNS text AS
 #      $$
-#          SELECT lower("alcs".unaccent('"alcs".unaccent', ));
+#          SELECT lower(public.unaccent('public.unaccent', ));
 #      $$ LANGUAGE sql IMMUTABLE;
 #
 USE_LOWER_UNACCENT	0
