Migrate tests to Jest
* Migrate tests to use createMock
* Update expects as needed
* Add NO_ERRORS_SCHEMA to prevent warnings about child components
* With esModuleInterop: true, fix moment imports by removing * as

--- a/alcs-frontend/tsconfig.json
+++ b/alcs-frontend/tsconfig.json
@@ -18,8 +18,15 @@
     "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
-    "lib": ["es2020", "dom"],
-    "types": ["jest"]
+    "lib": [
+      "es2020",
+      "dom"
+    ],
+    "types": [
+      "jest"
+    ],
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
