Fix dockerfile and workflow for new structure

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ env:
   API_IMAGE_NAME: alcs-api
   MIGRATE_IMAGE_NAME: alcs-migrate
   FE_IMAGE_NAME: alcs-frontend
+  PORTAL_API_IMAGE_NAME: alcs-portal-api
   GITOPS_REPO: bcgov-c/tenant-gitops-a5cf88
 
 jobs:
@@ -38,6 +39,9 @@ jobs:
         oc import-image alcs-migrate:latest -n ${{secrets.LICENSE_PLATE}}-tools
         oc tag alcs-migrate:latest alcs-migrate:${{ github.run_number }} -n ${{secrets.LICENSE_PLATE}}-tools
 
+      # oc import-image alcs-portal-api:latest -n ${{secrets.LICENSE_PLATE}}-tools
+      # oc tag alcs-portal-api:latest alcs-portal-api:${{ github.run_number }} -n ${{secrets.LICENSE_PLATE}}-tools
+
     - name: Repository Dispatch
       uses: peter-evans/repository-dispatch@v1
       with:
@@ -49,5 +53,6 @@ jobs:
             "apiImage": "image-registry.apps.silver.devops.gov.bc.ca/a5cf88-tools/${{ env.API_IMAGE_NAME }}:${{ github.run_number }}",
             "migrateImage": "image-registry.apps.silver.devops.gov.bc.ca/a5cf88-tools/${{ env.MIGRATE_IMAGE_NAME }}:${{ github.run_number }}",
             "frontendImage": "image-registry.apps.silver.devops.gov.bc.ca/a5cf88-tools/${{ env.FE_IMAGE_NAME }}:${{ github.run_number }}",
+            "portalApiImage": "image-registry.apps.silver.devops.gov.bc.ca/a5cf88-tools/${{ env.PORTAL_API_IMAGE_NAME }}:${{ github.run_number }}",
             "commitMessage": "${{ github.sha }}"
           }
