--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,9 @@ jobs:
     - name: Build and push alcs-api image
       uses: docker/build-push-action@v2
       with:
-        context: ./alcs-api
+        context: ./services
+        build-args: |
+          NEST_APP=alcs  
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.prep.outputs.tags }}
         cache-from: type=local,src=/tmp/.buildx-cache
@@ -58,6 +60,7 @@ jobs:
         labels: |
           org.opencontainers.image.source=${{ github.event.repository.html_url }}
           org.opencontainers.image.revision=${{ github.sha }}
+
     # Temp fix
     # https://github.com/docker/build-push-action/issues/252
     # https://github.com/moby/buildkit/issues/1896
@@ -159,8 +162,8 @@ jobs:
     - name: Build and push alcs-migrate image
       uses: docker/build-push-action@v2
       with:
-        context: ./alcs-api
-        file: ./alcs-api/Dockerfile.migrate
+        context: ./services
+        file: ./services/Dockerfile.migrate
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.prep.outputs.tags }}
         cache-from: type=local,src=/tmp/.buildx-cache
