--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -32,7 +32,7 @@ jobs:
   test-api:
     defaults:
       run:
-        working-directory: alcs-api
+        working-directory: services
     strategy:
       matrix:
         platform: [ubuntu-latest]
@@ -51,7 +51,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: coverage-api
-          path: ${{ github.workspace }}/alcs-api/coverage
+          path: ${{ github.workspace }}/services/coverage
           if-no-files-found: error
           retention-days: 1
   coverage:
