--- a/.github/workflows/schemaspy.yml
+++ b/.github/workflows/schemaspy.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           npm install
           npm run typeorm migration:run
-        working-directory: alcs-api
+        working-directory: services
       - name: Create Output Folder
         run: |
           mkdir output
