--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,6 +55,7 @@ services:
       retries: 5
     volumes:
       - postgres:/var/lib/postgres
+      - ./docker/postgres-schemas.sql:/docker-entrypoint-initdb.d/postgres-schemas.sql
 
   ###################### Redis ######################
   redis:
