--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
   test-api:
     defaults:
       run:
-        working-directory: alcs-api
+        working-directory: services
     strategy:
       matrix:
         platform: [ubuntu-latest]
