--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,170 +9,45 @@ env:
   GITOPS_REPO: bcgov-c/tenant-gitops-a5cf88
   
 jobs:
-  #===============================BUILD API===============================#
   build-api:
-    runs-on: ubuntu-22.04
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Lowercase repo owner
-      id: lowercase_repo_owner
-      uses: ASzc/change-string-case-action@v1
-      with:
-        string: ${{ github.repository_owner }}
-
-    - name: Prepare labels and tags
-      id: prep
-      run: |
-        DOCKER_IMAGE=ghcr.io/${{ steps.lowercase_repo_owner.outputs.lowercase }}/alcs-api
-        TAGS="${DOCKER_IMAGE}:${{ github.run_number }},${DOCKER_IMAGE}:latest"
-        echo ::set-output name=tags::${TAGS}
-        echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-api-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-api-
-
-    - name: Build and push alcs-api image
-      uses: docker/build-push-action@v2
-      with:
-        context: ./services
-        build-args: |
-          NEST_APP=alcs  
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.prep.outputs.tags }}
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache-new
-        labels: |
-          org.opencontainers.image.source=${{ github.event.repository.html_url }}
-          org.opencontainers.image.revision=${{ github.sha }}
-
-    # Temp fix
-    # https://github.com/docker/build-push-action/issues/252
-    # https://github.com/moby/buildkit/issues/1896
-    - name: Move cache
-      run: |
-        rm -rf /tmp/.buildx-cache
-        mv /tmp/.buildx-cache-new /tmp/.buildx-cache 
-  #===============================BUILD FRONTEND===============================#
+    uses: ./.github/workflows/_build-image.yml
+    with:
+      image-name: alcs-api 
+      build-context: ./services
+      build-args: NEST_APP=alcs
+    secrets: inherit
   build-frontend:
-    runs-on: ubuntu-22.04
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Lowercase repo owner
-      id: lowercase_repo_owner
-      uses: ASzc/change-string-case-action@v1
-      with:
-        string: ${{ github.repository_owner }}
-
-    - name: Prepare labels and tags
-      id: prep
-      run: |
-        DOCKER_IMAGE=ghcr.io/${{ steps.lowercase_repo_owner.outputs.lowercase }}/alcs-frontend
-        TAGS="${DOCKER_IMAGE}:${{ github.run_number }},${DOCKER_IMAGE}:latest"
-        echo ::set-output name=tags::${TAGS}
-        echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-frontend-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-frontend-
-
-    - name: Build and push alcs-frontend image
-      uses: docker/build-push-action@v2
-      with:
-        context: ./alcs-frontend
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.prep.outputs.tags }}
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache-new
-        labels: |
-          org.opencontainers.image.source=${{ github.event.repository.html_url }}
-          org.opencontainers.image.revision=${{ github.sha }}
-    - name: Move cache
-      run: |
-        rm -rf /tmp/.buildx-cache
-        mv /tmp/.buildx-cache-new /tmp/.buildx-cache 
-  #===============================BUILD MIGRATE===============================#
+    uses: ./.github/workflows/_build-image.yml
+    with:
+      image-name: alcs-frontend
+      build-context: ./alcs-frontend
+    secrets: inherit
   build-migrate:
-    runs-on: ubuntu-22.04
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Lowercase repo owner
-      id: lowercase_repo_owner
-      uses: ASzc/change-string-case-action@v1
-      with:
-        string: ${{ github.repository_owner }}
-
-    - name: Prepare labels and tags
-      id: prep
-      run: |
-        DOCKER_IMAGE=ghcr.io/${{ steps.lowercase_repo_owner.outputs.lowercase }}/alcs-migrate
-        TAGS="${DOCKER_IMAGE}:${{ github.run_number }},${DOCKER_IMAGE}:latest"
-        echo ::set-output name=tags::${TAGS}
-        echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-migrate-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-migrate-
-
-    - name: Build and push alcs-migrate image
-      uses: docker/build-push-action@v2
-      with:
-        context: ./services
-        file: ./services/Dockerfile.migrate
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.prep.outputs.tags }}
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache-new
-        labels: |
-          org.opencontainers.image.source=${{ github.event.repository.html_url }}
-          org.opencontainers.image.revision=${{ github.sha }}
-    - name: Move cache
-      run: |
-        rm -rf /tmp/.buildx-cache
-        mv /tmp/.buildx-cache-new /tmp/.buildx-cache 
-
+    uses: ./.github/workflows/_build-image.yml
+    with:
+      image-name: alcs-migrate
+      build-context: ./services
+      dockerfile: Dockerfile.migrate
+      build-args: NEST_APP=alcs
+    secrets: inherit
+  build-portal-api:
+    uses: ./.github/workflows/_build-image.yml
+    with:
+      image-name: alcs-portal-api 
+      build-context: ./services
+      build-args: NEST_APP=portal
+    secrets: inherit
+  build-portal-frontend:
+    uses: ./.github/workflows/_build-image.yml
+    with:
+      image-name: alcs-portal-frontend
+      build-context: ./portal-frontend
+    secrets: inherit
+  build-portal-migrate:
+    uses: ./.github/workflows/_build-image.yml
+    with:
+      image-name: alcs-portal-migrate
+      build-context: ./services
+      dockerfile: Dockerfile.migrate
+      build-args: NEST_APP=portal
+    secrets: inherit
