--- a/services/Dockerfile.migrate
+++ b/services/Dockerfile.migrate
@@ -19,8 +19,8 @@ ARG environment=production
 
 ENV NODE_ENV ${environment}
 
-ARG nest_app=alcs
-ENV NEST_APP=${nest_app}
+ARG NEST_APP=alcs
+ENV NEST_APP=${NEST_APP}
 
 COPY . .
 
