--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --watchAll",
+    "test": "ng test --watch",
     "test:ci": "ng test",
     "test:cov": "ng test --collect-coverage",
     "format": "npx prettier --write .",
