--- a/services/package.json
+++ b/services/package.json
@@ -47,11 +47,14 @@
     "@fastify/helmet": "^9.1.0",
     "@fastify/multipart": "^7.1.1",
     "@fastify/static": "^6.4.0",
+    "@grpc/grpc-js": "^1.7.3",
+    "@grpc/proto-loader": "^0.7.3",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/bull": "^0.6.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.2.1",
     "@nestjs/platform-fastify": "^9.2.1",
     "@nestjs/swagger": "^6.0.3",
     "@nestjs/typeorm": "^9.0.0",
@@ -64,6 +67,7 @@
     "keycloak-connect": "^18.0.2",
     "nest-keycloak-connect": "^1.9.0",
     "nestjs-cls": "^2.2.0",
+    "nestjs-grpc-reflection": "^0.0.18",
     "nestjs-pino": "^3.1.1",
     "nestjs-spelunker": "^1.1.2",
     "node-jose": "^2.1.1",
@@ -73,6 +77,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "source-map-support": "^0.5.21",
+    "ts-proto": "^1.135.0",
+    "ts-protoc-gen": "^0.15.0",
     "typeorm": "^0.3.9",
     "typeorm-naming-strategies": "^4.1.0",
     "uuid": "^8.3.2"
