--- a/portal-frontend/angular.json
+++ b/portal-frontend/angular.json
@@ -39,6 +39,11 @@
           },
           "configurations": {
             "production": {
+              "optimization": {
+                "styles": {
+                  "inlineCritical": false
+                }
+              },
               "budgets": [
                 {
                   "type": "initial",
