--- a/alcs-frontend/nginx.conf
+++ b/alcs-frontend/nginx.conf
@@ -3,14 +3,25 @@ events {}
 http {
     # Gzip
     gzip on;
-    gzip_vary on; 
-    gzip_min_length 10240; 
-    gzip_proxied expired no-cache no-store private auth; 
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml; 
+    gzip_vary on;
+    gzip_min_length 10240;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
     gzip_disable "MSIE [1-6]\.";
+
+    server_tokens off;
 
     include /etc/nginx/mime.types;
     server {
+        add_header 'X-Content-Type-Options'  'nosniff';
+        add_header 'X-Frame-Options' 'sameorigin';
+        add_header 'X-XSS-Protection' '1; mode=block';
+        add_header 'Strict-Transport-Security' 'max-age=31536000; includeSubDomains; preload';
+        add_header 'Cache-control' 'no-cache';
+        add_header 'Content-Security-Policy' "default-src 'self';img-src 'self';style-src 'unsafe-inline' 'self';connect-src *; font-src 'self' https://fonts.gstatic.com https://fonts.googleapis.com; base-uri 'self'; object-src 'none';";
+        add_header 'Permissions-Policy' 'camera=(), geolocation=(), microphone=()';
+        add_header 'Referrer-Policy' 'same-origin';
+
         listen 8081;
         server_name localhost;
         root /usr/share/nginx/html;
