--- a/.github/workflows/zap_api.yml
+++ b/.github/workflows/zap_api.yml
@@ -1,11 +1,5 @@
 name: OWASP Zap API Scan
-on:
-  push:
-    branches:
-      - zap
-#on:
-#  schedule:
-#    - cron: "0 0 * * MON"
+on: manual_dispatch
 
 jobs:
   zap_scan:
