--- a/portal-frontend/nginx.conf
+++ b/portal-frontend/nginx.conf
@@ -10,6 +10,7 @@ http {
     gzip_disable "MSIE [1-6]\.";
 
     server_tokens off;
+    proxy_cookie_path / "/; secure; HttpOnly; SameSite=none";
 
     include /etc/nginx/mime.types;
     server {
