--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,4 @@
-version: "2"         # required to adjust maintainability checks
+version: "2" # required to adjust maintainability checks
 checks:
   argument-count:
     config:
@@ -25,11 +25,17 @@ checks:
     config:
       threshold: 4
   identical-code:
-    config:
-      threshold: 120
+    enabled: false
   similar-code:
+    enabled: false
+plugins:
+  duplication:
+    enabled: true
     config:
-      threshold: 100
+      languages:
+        TypeScript:
+          count_threshold: 3
+          mass_threshold: 120
 exclude_patterns:
   - "bin/"
   - "**/node_modules/"
