--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -33,7 +33,7 @@ plugins:
     enabled: true
     config:
       languages:
-        TypeScript:
+        typescript:
           count_threshold: 2
           mass_threshold: 50
 exclude_patterns:
