--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -28,6 +28,7 @@ plugins:
   duplication:
     enabled: true
     config:
+      count_threshold: 3
       languages:
         typescript:
           patterns:
