--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -31,6 +31,7 @@ plugins:
       count_threshold: 3
       languages:
         typescript:
+          mass_threshold: 60
           patterns:
             - "**/*.ts"
 exclude_patterns:
