--- a/portal-frontend/package.json
+++ b/portal-frontend/package.json
@@ -43,6 +43,6 @@
     "jasmine-core": "~4.1.0",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
-    "typescript": "~4.7.2"
+    "typescript": "^4.9.4"
   }
 }
