--- a/portal-frontend/Dockerfile
+++ b/portal-frontend/Dockerfile
@@ -40,5 +40,8 @@ COPY --from=build /app/dist /usr/share/nginx/html
 # Dynamically update environment values
 RUN chmod -R go+rwx /usr/share/nginx/html/assets
 
+# provide dynamic scp content-src
+ENV ENABLED_CONNECT_SRC="'self' http://localhost:* nrs.objectstore.gov.bc.ca"
+
 # When the container starts, replace the settings.json with values from environment variables
-CMD ["/bin/sh",  "-c",  "envsubst < /usr/share/nginx/html/assets/env.template.js > /usr/share/nginx/html/assets/env.js && exec nginx -g 'daemon off;'"]
+ENTRYPOINT [ "./init.sh" ]
