--- a/portal-frontend/Dockerfile
+++ b/portal-frontend/Dockerfile
@@ -31,8 +31,12 @@ EXPOSE 8081
 # Remove default nginx website
 RUN rm -rf /usr/share/nginx/html/*
 
+# Copy init.sh
+COPY ./init.sh .
+
 # Copy nginx config file
 COPY ./nginx.conf /etc/nginx/nginx.conf
+RUN chmod go+rwx /etc/nginx/nginx.conf
 
 # Copy dist folder fro build stage to nginx public folder
 COPY --from=build /app/dist /usr/share/nginx/html
