--- a/alcs-frontend/nginx.conf
+++ b/alcs-frontend/nginx.conf
@@ -27,8 +27,27 @@ http {
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
+
+        error_page 503 /maintenance.html;
+        location = /maintenance.html {
+                root /usr/share/nginx/html;
+                index maintenance.html;
+                internal;
+        }
+
+        set $maintenance_mode "$MAINTENANCE_MODE";
+
+        # Still allow loading of assets in maintenance mode
+        location ~* \.(css|png|js|jpg|jpeg) {
+            # The file will be returned
+        }
+
         location / {
+            if ($maintenance_mode = "true") {
+                return 503;
+            }
             try_files $uri $uri/ /index.html;
         }
+
     }
 }
