Prepare ALCS for Upgrade

--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -27,7 +27,8 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@bcgov/bc-sans": "^1.0.1",
-    "@ng-matero/extensions": "^14.2.1",
+    "@matheo/datepicker": "^13.0.0-beta.1",
+    "@ng-matero/extensions": "^15.0.1",
     "@ng-select/ng-option-highlight": "^0.0.7",
     "angular-mentions": "^1.5.0",
     "jwt-decode": "^3.1.2",
@@ -39,12 +40,12 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^14.1.0",
+    "@angular-builders/jest": "^15.0.0",
     "@angular-devkit/build-angular": "^14.0.5",
     "@angular-eslint/builder": "14.1.2",
     "@angular-eslint/eslint-plugin": "14.1.2",
     "@angular-eslint/eslint-plugin-template": "14.1.2",
-    "@angular-eslint/schematics": "14.1.2",
+    "@angular-eslint/schematics": "^15.2.0",
     "@angular-eslint/template-parser": "14.1.2",
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
