Allow favicon in maintenance mode

--- a/alcs-frontend/nginx.conf
+++ b/alcs-frontend/nginx.conf
@@ -38,7 +38,7 @@ http {
         set $maintenance_mode "$MAINTENANCE_MODE";
 
         # Still allow loading of assets in maintenance mode
-        location ~* \.(css|png|js|jpg|jpeg) {
+        location ~* \.(css|png|js|jpg|jpeg|ico) {
             # The file will be returned
         }
 
