Specify PR base

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -1,4 +1,4 @@
-name: CD
+name: Development CD
 on:
   push:
     branches:
@@ -23,5 +23,6 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with: 
+          base: main
           branch: develop
 
