Ora2PG script for exporting OATS

--- a/ora2pg/ora2pg.conf
+++ b/ora2pg/ora2pg.conf
@@ -5,6 +5,8 @@
 # of the following configuration directives.
 #IMPORT	common.conf
 
+PG_VERSION	12
+
 #------------------------------------------------------------------------------
 # INPUT SECTION (Oracle connection or input file)
 #------------------------------------------------------------------------------
@@ -17,20 +19,24 @@
 #INPUT_FILE	ora_plsql_src.sql
 
 # Set the Oracle home directory
-ORACLE_HOME	/usr/local/oracle/10g
+ORACLE_HOME	/usr/lib/oracle/12.2/client64
 
 # Set Oracle database connection (datasource, user, password)
-ORACLE_DSN	dbi:Oracle:host=oraDB;service_name=ORCLPDB1.localdomain;port=1521
-ORACLE_USER	IMPOATS
-ORACLE_PWD	Oradoc_db1
+# Local
+# ORACLE_DSN	dbi:Oracle:host=oraDB;service_name=ORCLPDB1.localdomain;port=1521
+# ORACLE_USER	IMPOATS
+# ORACLE_PWD	Oradoc_db1
+
+ORACLE_DSN	dbi:Oracle:host=nrcdb02.bcgov;service_name=maltest1.nrs.bcgov;port=1521
+ORACLE_USER	PDITTARO
 
 # Set this to 1 if you connect as simple user and can not extract things
 # from the DBA_... tables. It will use tables ALL_... This will not works
 # with GRANT export, you should use an Oracle DBA username at ORACLE_USER
-USER_GRANTS     0
+USER_GRANTS     1
 
 # Trace all to stderr
-DEBUG		0
+DEBUG		1
 
 # This directive can be used to send an initial command to Oracle, just after
 # the connection. For example to unlock a policy before reading objects or
@@ -43,10 +49,11 @@ DEBUG		0
 #------------------------------------------------------------------------------
 
 # Export Oracle schema to PostgreSQL schema
-EXPORT_SCHEMA	0
+EXPORT_SCHEMA	1
 
 # Oracle schema/owner to use
 #SCHEMA		SCHEMA_NAME
+SCHEMA		OATS
 
 # Enable/disable the CREATE SCHEMA SQL order at starting of the output file.
 # It is enable by default and concern on TABLE export type.
@@ -187,7 +194,7 @@ ALLOW oats_accomplishments oats_accomplishment_codes oats_addresses oats_address
 
 # By default Ora2Pg will export your external table as file_fdw tables. If
 # you don't want to export those tables at all, set the directive to 0.
-EXTERNAL_TO_FDW		1
+EXTERNAL_TO_FDW		0
 
 # Add a TRUNCATE TABLE instruction before loading data on COPY and INSERT
 # export. When activated, the instruction will be added only if there's no
@@ -234,8 +241,8 @@ REORDERING_COLUMNS	0
 # used by Ora2Pg to extract data. The format is TABLENAME[SQL_QUERY].
 # If you have multiple tables to extract by replacing the Ora2Pg query, you can
 # define multiple REPLACE_QUERY lines.
-#REPLACE_QUERY	EMPLOYEES[SELECT e.id,e.fisrtname,lastname FROM EMPLOYEES e JOIN EMP_UPDT u ON (e.id=u.id AND u.cdate>'2014-08-01 00:00:00')]
-
+# REPLACE_QUERY	EMPLOYEES[SELECT e.id,e.fisrtname,lastname FROM EMPLOYEES e JOIN EMP_UPDT u ON (e.id=u.id AND u.cdate>'2014-08-01 00:00:00')]
+REPLACE_QUERY	OATS_DOCUMENTS[SELECT d.DOCUMENT_ID, d.DOCUMENT_CODE, d.ALR_APPLICATION_ID, d.ISSUE_ID, d.PLANNING_REVIEW_ID, d.FILE_NAME, d.DESCRIPTION, null, d.REFERENCED_IN_STAFF_RPT_IND, d.DOCUMENT_SOURCE_CODE, d.SUBJECT_PROPERTY_ID, d.PUBLICLY_VIEWABLE_IND, d.APP_LG_VIEWABLE_IND, d.UPLOADED_DATE, d.WHO_CREATED, d.WHEN_CREATED, d.WHO_UPDATED, d.WHEN_UPDATED, d.REVISION_COUNT from OATS_DOCUMENTS d]
 #------------------------------------------------------------------------------
 # FULL TEXT SEARCH SECTION (Control full text search export behaviors)
 #------------------------------------------------------------------------------
@@ -471,7 +478,8 @@ DISABLE_TRIGGERS 0
 # You may wish to just extract data from some fields, the following directives
 # will help you to do that. Works only with export type INSERT or COPY
 # Modify output from the following tables(fields separate by space or comma)
-#MODIFY_STRUCT	TABLE_TEST(dico,dossier)
+
+# MODIFY_STRUCT	OATS_DOCUMENTS(DOCUMENT_ID DOCUMENT_CODE ALR_APPLICATION_ID ISSUE_ID PLANNING_REVIEW_ID FILE_NAME DESCRIPTION REFERENCED_IN_STAFF_RPT_IND DOCUMENT_SOURCE_CODE SUBJECT_PROPERTY_ID PUBLICLY_VIEWABLE_IND APP_LG_VIEWABLE_IND UPLOADED_DATE WHO_CREATED WHEN_CREATED WHO_UPDATED WHEN_UPDATED REVISION_COUNT)
 
 # You may wish to change table names during data extraction, especally for
 # replication use. Give a list of tables separate by space as follow.
@@ -553,7 +561,7 @@ USE_RESERVED_WORDS	0
 OUTPUT		output.sql
 
 # Base directory where all dumped files must be written
-#OUTPUT_DIR	/var/tmp
+#OUTPUT_DIR	/var/tmp/ora2pg
 
 # Path to the bzip2 program. See OUTPUT directive above.
 BZIP2	
