--- a/services/package.json
+++ b/services/package.json
@@ -65,7 +65,9 @@
     "config": "^3.3.9",
     "csv-parser": "^3.0.0",
     "dayjs": "^1.11.7",
+    "handlebars": "^4.7.7",
     "keycloak-connect": "^18.0.2",
+    "mjml": "^4.13.0",
     "nest-keycloak-connect": "^1.9.1",
     "nestjs-cls": "^2.2.1",
     "nestjs-grpc-reflection": "^0.0.18",
