copy templates to container

--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -58,5 +58,6 @@ COPY --from=build /opt/app-root/node_modules ./node_modules
 COPY --from=build /opt/app-root/dist/apps/${NEST_APP} ./dist
 COPY ./config/ /opt/app-root/config/
 COPY ./local-certificates /opt/app-root/local-certificates
+COPY ./templates/ /opt/app-root/templates/
 
 CMD [ "node", "dist/main.js" ]
